# ner

./: .gitignore  predict.py  pyproject.toml  training.py
fin_relation/model/: inference.py  predict.py
