[project]
name = "fin_relation"
version = "0.1.0"
description = ""
authors = [
    {name = "Kunal Mandalia",email = "kunal.v.mandalia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.51.3,<5.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "accelerate (>=0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
